--- a/restaurant/templates/menu.html
+++ b/restaurant/templates/menu.html
@@ -8,11 +8,14 @@
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
         <!--========== CSS ==========-->
-        <link rel="stylesheet" href="assets/css/styles.css">
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/css/styles.css') }}">
 
         <title>Menu</title>
     </head>
     <body>
+        <!-- {% for mesg in get_flashed_messages() %}
+        <h1>{{ mesg }}</h1>
+        {% endfor %} -->
 
     <!--========== SCROLL TOP ==========-->
     <a href="#" class="scrolltop" id="scroll-top">
@@ -26,12 +29,17 @@
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="index.html" class="nav__link active-link">Home</a></li>
+                    <li class="nav__item"><a href="{{ url_for('home_page' )}}" class="nav__link active-link">Home</a></li>
                     <li class="nav__item"><a href="index.html#about" class="nav__link">About</a></li>
                     <li class="nav__item"><a href="index.html#services" class="nav__link">Services</a></li>
-                    <li class="nav__item"><a href="login.html" class="nav__link">Log in</a></li>
-                    <li class="nav__item"><a href="login.html#register" class="nav__link">Register</a></li>
-                    <li class="nav__item"><a href="index.html#contact" class="nav__link">Contact us</a></li>
+                    {% if current_user.is_authenticated %}
+                    <li class="nav__item"><a href="{{ url_for('logout') }}" class="nav__link">Log Out</a></li>
+                    {% else %}
+                    <li class="nav__item"><a href="{{ url_for('login_page') }}" class="nav__link">Log in</a></li>
+                    <li class="nav__item"><a href="{{ url_for('login_page') }}" class="nav__link">Register</a></li>
+                    {% endif %}
+                    <!-- <li class="nav__item"><a href="index.html#contact" class="nav__link">Contact us</a></li> -->
+                    <li class="nav__item"><a href="{{ url_for('cart_page') }}" class="cart__button"><i class='bx bx-cart-alt'></i></a></li>
 
                     <li><i class='bx bx-moon change-theme' id="theme-button"></i></li>
                 </ul>
@@ -41,8 +49,20 @@
                 <i class='bx bx-menu'></i>
             </div>
         </nav>
+        <!-- {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                    <button type="button" class="m1-2 mb-1 close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    {{ message }}
+                </div>
+            {% endfor %}
+            {% endif %}
+        {% endwith %} -->
     </header>
-
+    <!--========== HEADER ENDS ==========-->
 <!-- ========== MENU ==========-->
 <section class="menu section bd-container" id="menu">
     <h2 class="section-title">Menu</h2>
@@ -54,108 +74,31 @@
       </div>
     <!-- SEARCH BOX ENDS -->
 
-    <!-- ITEMS -->
+    <!-- ========== ITEMS ==========-->
     <div class="menu__container bd-grid">
-        <div class="menu__content">
-            <img src="assets/img/plate1.png" alt="" class="menu__img">
-            <h3 class="menu__name">Barbecue salad</h3>
-            <span class="menu__detail">Delicious dish</span>
-            <span class="menu__preci">₹200.00</span>
-            <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
-        </div>
 
+        {% for item in items %}
         <div class="menu__content">
-            <img src="assets/img/plate2.png" alt="" class="menu__img">
-            <h3 class="menu__name">Salad with fish</h3>
-            <span class="menu__detail">Delicious dish</span>
-            <span class="menu__preci">₹150.00</span>
-            <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
-        </div>
+            <!-- <img src="static/styles/img/plate1.png" alt="" class="menu__img"> -->
+            <!-- <img src="static/styles/img/{{ item.source }}"  alt="" class="menu__img" /> -->
+            <img src="{{ url_for('static', filename = 'styles/img/'+item.source) }}" alt="" class="menu__img">
+            <!-- <h3 class="menu__name">Barbecue salad</h3> -->
+            <h3 class="menu__name">{{ item.name }}</h3>
+            <!-- <span class="menu__detail">Delicious dish</span> -->
+            <span class = "menu_detail"> {{ item.description }} </span>
+            <span class="menu__price">₹{{ item.price }}</span>
+            <!-- <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a> -->
+            <form method = 'POST'>
+                {{ add_form.hidden_tag() }}
+                <input id="selected_item" name="selected_item" type="hidden" value="{{ item.name }}">
+                {{ add_form.submit(class = 'button menu__button') }}
+            </form>
 
-        <div class="menu__content">
-            <img src="assets/img/plate3.png" alt="" class="menu__img">
-            <h3 class="menu__name">Spinach salad</h3>
-            <span class="menu__detail">Delicious dish</span>
-            <span class="menu__preci">₹100.00</span>
-            <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
         </div>
+        {% endfor %}
 
-        <div class="menu__content">
-            <img src="assets/img/chicken.png" alt="" class="menu__img">
-            <h3 class="menu__name">Roasted Chicken</h3>
-            <span class="menu__detail">Delicious dish</span>
-            <span class="menu__preci">₹200.00</span>
-            <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
-        </div>
-
-        <div class="menu__content">
-            <img src="assets/img/pizza.png" alt="" class="menu__img">
-            <h3 class="menu__name">Cheese Pizza</h3>
-            <span class="menu__detail">Delicious dish</span>
-            <span class="menu__preci">₹150.00</span>
-            <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
-        </div>
-
-        <div class="menu__content">
-            <img src="assets/img/noodles.png" alt="" class="menu__img">
-            <h3 class="menu__name">Fried Noodles</h3>
-            <span class="menu__detail">Delicious dish</span>
-            <span class="menu__preci">₹100.00</span>
-            <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
-        </div>
-
-        <div class="menu__content">
-            <img src="assets/img/plate1.png" alt="" class="menu__img">
-            <h3 class="menu__name">Barbecue salad</h3>
-            <span class="menu__detail">Delicious dish</span>
-            <span class="menu__preci">₹200.00</span>
-            <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
-        </div>
-
-        <div class="menu__content">
-            <img src="assets/img/plate2.png" alt="" class="menu__img">
-            <h3 class="menu__name">Salad with fish</h3>
-            <span class="menu__detail">Delicious dish</span>
-            <span class="menu__preci">₹150.00</span>
-            <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
-        </div>
-
-        <div class="menu__content">
-            <img src="assets/img/plate3.png" alt="" class="menu__img">
-            <h3 class="menu__name">Spinach salad</h3>
-            <span class="menu__detail">Delicious dish</span>
-            <span class="menu__preci">₹100.00</span>
-            <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
-        </div>
-
-        <div class="menu__content">
-            <img src="assets/img/plate1.png" alt="" class="menu__img">
-            <h3 class="menu__name">Barbecue salad</h3>
-            <span class="menu__detail">Delicious dish</span>
-            <span class="menu__preci">₹200.00</span>
-            <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
-        </div>
-
-        <div class="menu__content">
-            <img src="assets/img/plate2.png" alt="" class="menu__img">
-            <h3 class="menu__name">Salad with fish</h3>
-            <span class="menu__detail">Delicious dish</span>
-            <span class="menu__preci">₹150.00</span>
-            <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
-        </div>
-
-        <div class="menu__content">
-            <img src="assets/img/plate3.png" alt="" class="menu__img">
-            <h3 class="menu__name">Spinach salad</h3>
-            <span class="menu__detail">Delicious dish</span>
-            <span class="menu__preci">₹100.00</span>
-            <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
-        </div>
-
-        <!-- ITEM ENDS -->
     </div>
 </section>
-
 <!-- ========== MENU ENDS ==========-->
 
 <!--========== FOOTER ==========-->
@@ -209,7 +152,8 @@
 <script src="https://unpkg.com/scrollreveal"></script>
 
 <!--========== MAIN JS ==========-->
-<script src="assets/js/main.js"></script>
+<script src="static/styles/js/main.js"></script>
+
 
 </body>
 </html>
