--- a/restaurant/templates/login.html
+++ b/restaurant/templates/login.html
@@ -11,9 +11,19 @@
     ></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="assets/css/style-login.css" />
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/css/style-login.css') }}">
 
     <title>Login & Registration</title>
+     <!-- FLASH
+     {% with messages = get_flashed_messages(with_categories=true) %}
+     {% if messages %}
+       <ul class=flashes>
+       {% for category, message in messages %}
+         <li class="{{ category }}">{{ message }}</li>
+       {% endfor %}
+       </ul>
+     {% endif %}
+    {% endwith %} -->
   </head>
   <body>
     <div class="container">
@@ -21,24 +31,29 @@
         <div class="signin-signup">
 
           <!-- LOGIN FORM -->
-          <form action="#" class="sign-in-form">
+          <form method = "POST" action="{{ url_for('login_page') }}" class="sign-in-form">
+            {{ forml.hidden_tag() }}
             <h2 class="title">Sign in</h2>
             <div class="input-field">
               <i class="fas fa-user"></i>
-              <input type="text" placeholder="Username" />
+              <!-- <input type="text" placeholder="Username" /> -->
+              {{ forml.username(placeholder = "Username") }}
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
-              <input type="password" placeholder="Password" />
+              <!-- <input type="password" placeholder="Password" /> -->
+              {{ forml.password(placeholder = "Password") }}
             </div>
 
             <!-- FORGOT PASSWORD -->
             <div class='f-password'>
-                <h4 class="forgot-password"><a href="#" class="fp-link">Forgot Password?</a></h4>
+                <h4 class="forgot-password"><a href="{{ url_for('forgot') }}" class="fp-link">Forgot Password?</a></h4>
             </div>
             <!-- FORGOT PASSWORD ENDS -->
 
-            <input type="submit" value="Login" class="btn solid" />
+            <!-- <input type="submit" value="Login" class="btn solid" /> -->
+            {{ forml.submit(class = 'btn solid') }}
+
             <p class="social-text">Or Sign in with social platforms</p>
             <div class="social-media">
               <a href="#" class="social-icon">
@@ -58,21 +73,40 @@
           <!-- LOGIN FORM ENDS -->
 
           <!-- REGISTRATION FORM -->
-          <form action="#" class="sign-up-form">
+          <form method = "POST" action="{{ url_for('register_page') }}" class="sign-up-form">
+            {{ form.hidden_tag() }}
             <h2 class="title">Sign up</h2>
+
             <div class="input-field">
               <i class="fas fa-user"></i>
-              <input type="text" placeholder="Username" />
+              {{ form.username(placeholder = "Username") }}
             </div>
             <div class="input-field">
-              <i class="fas fa-envelope"></i>
-              <input type="email" placeholder="Email" />
+              <i class="fas fa-user"></i>
+              {{ form.fullname(placeholder = "Full Name") }}
+            </div>
+            <div class="input-field">
+              <i class="fas fa-map-marker-alt"></i>
+              {{ form.address(placeholder = "Address") }}
+            </div>
+            <div class="input-field">
+              <i class="fas fa-mobile-alt"></i>
+              <!-- <input type="email" placeholder="Email" /> -->
+              {{ form.phone_number(placeholder = 'Phone Number') }}
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
-              <input type="password" placeholder="Password" />
+              <!-- <input type="password" placeholder="Password" /> -->
+              {{ form.password1(placeholder = 'Password') }}
             </div>
-            <input type="submit" class="btn" value="Sign up" />
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <!-- <input type="password" placeholder="Confirm Password" /> -->
+              {{ form.password2(placeholder = 'Confirm Password') }}
+            </div>
+            <!-- <input type="submit" class="btn" value="Sign up" /> -->
+            {{ form.submit(class = 'btn') }}
+
             <p class="social-text">Or Sign up with social platforms</p>
             <div class="social-media">
               <a href="#" class="social-icon">
@@ -105,7 +139,7 @@
               Sign up
             </button>
           </div>
-          <img src="assets/img/log.svg" class="image" alt="" />
+          <img src="static/styles/img/log.svg" class="image" alt="" />
         </div>
 
         <!-- REGISTER PANEL -->
@@ -119,14 +153,13 @@
               Sign in
             </button>
           </div>
-          <img src="assets/img/delivery.svg" class="image" alt="" />
+          <img src="static/styles/img/register.svg" class="image" alt="" />
         </div>
       </div>
     </div>
 
     <!-- JAVASCRIPT -->
-    <script src="assets/js/login.js"></script>
+    <script src="static/styles/js/login.js"></script>
 
   </body>
 </html>
-
