--- a/restaurant/templates/order-id.html
+++ b/restaurant/templates/order-id.html
@@ -1,59 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/64d58efce2.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="assets/css/style-login.css" />
-    <title>Delivery Tracking</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="forms-container">
-        <div class="signin-signup">
-          <form action="#" class="sign-in-form">
-            <h2 class="title">Delivery Tracking</h2>
-            <div class="input-field">
-              <i class="fas fa-user"></i>
-              <input type="text" placeholder="Order ID" />
-            </div>
- 
-            <input type="submit" value="Track" class="btn solid" />
-          </form>
-        </div>
-      </div>
- 
-      <div class="panels-container">
-        <div class="panel left-panel">
-          <div class="content">
-            <h3>Forgot your Order ID?</h3>
-            <p>
-              Check your Orders history.
-            </p>
-            <button class="btn transparent" id="sign-up-btn">
-              Your Orders
-            </button>
-          </div>
-          <img src="assets/img/ontheway.svg" class="image" alt="" />
-        </div>
-        <!-- <div class="panel right-panel">
-          <div class="content">
-            <h3>One of us?</h3>
-            <p>
-              Already registered? then hop on & access our services.
-            </p>
-            <button class="btn transparent" id="sign-in-btn">
-              Sign in
-            </button>
-          </div>
-          <img src="assets/img/delivery.svg" class="image" alt="" />
-        </div> -->
-      </div>
-    </div>
- 
-    <script src="assets/js/login.js"></script>
-  </body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/64d58efce2.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/css/style-login.css') }}">
+    <title>Delivery Tracking</title>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+     {% if messages %}
+       <ul class=flashes>
+       {% for category, message in messages %}
+         <li class="{{ category }}">{{ message }}</li>
+       {% endfor %}
+       </ul>
+     {% endif %}
+    {% endwith %}
+  </head>
+  <body>
+    <div class="container">
+      <div class="forms-container">
+        <div class="signin-signup">
+
+          <form method = "POST" action="#" class="sign-in-form">
+            {{ orderid.hidden_tag() }}
+            <h2 class="title">Delivery Tracking</h2>
+            <div class="input-field">
+              <i class="fas fa-user"></i>
+              <!-- <input type="text" placeholder="Order ID" /> -->
+              {{ orderid.orderid(placeholder = "Order ID")}}
+            </div>
+
+            <!-- <input type="submit" value="Track" class="btn solid" /> -->
+            {{ orderid.submit(class = 'btn solid') }}
+          </form>
+        </div>
+      </div>
+
+      <div class="panels-container">
+        <div class="panel left-panel">
+          <div class="content">
+            <h3>Forgot your Order ID?</h3>
+            <p>
+              Check your Orders history.
+            </p>
+            <button class="btn transparent" id="sign-up-btn">
+              Your Orders
+            </button>
+          </div>
+          <img src="static/styles/img/ontheway.svg" class="image" alt="" />
+        </div>
+        <!-- <div class="panel right-panel">
+          <div class="content">
+            <h3>One of us?</h3>
+            <p>
+              Already registered? then hop on & access our services.
+            </p>
+            <button class="btn transparent" id="sign-in-btn">
+              Sign in
+            </button>
+          </div>
+          <img src="assets/img/delivery.svg" class="image" alt="" />
+        </div> -->
+      </div>
+    </div>
+
+    <script src="static/styles/js/login.js"></script>
+  </body>
 </html>
