--- a/restaurant/static/styles/css/styles.css
+++ b/restaurant/static/styles/css/styles.css
@@ -91,9 +91,9 @@ body{
 }
 
 /* remove scrollbar */
-/* body::-webkit-scrollbar {
+body::-webkit-scrollbar {
   display: none;
-}*/
+}
 /* remove scrollbar ends */
 
 h1,h2,h3,p,ul{
@@ -116,7 +116,7 @@ img{
 
 /*========== CLASS CSS ==========*/
 .section{
-  padding: 4rem 0 2rem;
+    
 }
 
 .section-title, .section-subtitle{
@@ -294,6 +294,7 @@ img{
   background-color: var(--first-color);
   color: #FFF;
   padding: .75rem 1rem;
+  border: none;
   border-radius: .5rem;
   transition: .3s;
 }
@@ -367,7 +368,7 @@ img{
   margin-bottom: var(--mb-2);
 }
 
-.menu__name, .menu__preci{
+.menu__name, .menu__price{
   font-weight: var(--font-semi-bold);
   color: var(--title-color);
 }
@@ -376,7 +377,7 @@ img{
   font-size: var(--normal-font-size);
 }
 
-.menu__detail, .menu__preci{
+.menu__detail, .menu__price{
   font-size: var(--small-font-size);
 }
 
@@ -393,6 +394,14 @@ img{
   border-radius: .5rem 0 .5rem 0;
 }
 
+.cart__button{
+  color: var(--text-color);
+}
+
+.cart__button:hover{
+  color: var(--first-color);
+}
+
 /*========== CONTACT ==========*/
 .contact__container{
   text-align: center;
@@ -402,7 +411,7 @@ img{
   margin-bottom: var(--mb-3);
 }
 
-/*========== FOOTER ==========*/
+/*========== FOOTER ==========*/  
 .footer__container{
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   row-gap: 2rem;
@@ -525,9 +534,9 @@ img{
     width: 130px;
   }
 
-  .app__store{
+  /* .app__store{
     margin: 0 var(--mb-1) 0 0;
-  }
+  } */
 }
 
 .loader-container{
@@ -556,6 +565,19 @@ img{
   .bd-container{
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .map-container{
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 22rem;
+  }
+
+  .orderinfo-container{
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1rem;
+    text-align: center;
   }
 
   .home__img{
@@ -694,4 +716,15 @@ tr:hover {
   transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
 }
 /* SEARCH BOX ENDS */
+
+/* DELIVERY TRACKING */
+#map {
+  position: absolute;
+  left: 25%;
+  top: 20%;
+  width: 50%;
+  height: 60%;
+  border-radius: 15px;
+  box-shadow: 0px 10px 20px #1687d933;
+  }
 
